# rubick-base

./: .gitignore  .npmrc  .prettierrc  CHANGELOG.md  README-EN.md  README.md  bob-esbuild.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: BuildCI.yml  ci.yml
example/: package.json  pnpm-lock.yaml
example/src/: index.js  iohook.js
lib/: index.js
lib/rust-backend/: index.d.ts  package.json
lib/rust-backend/scripts/: postinstall.js
lib/rust-backend/src/ioio/devices/: mouse.rs
scripts/: build.js  publish.js  publish.mjs
src/: apis.ts  extendAPI.ts  global.d.ts  index.test.ts  index.ts
src/lib/listen_event/: index.ts
src/lib/listen_event/ioio/: Cargo.toml  README.md  build.rs  index.d.ts  package.json  pnpm-lock.yaml
src/lib/listen_event/ioio/proto/: rubick.proto
src/lib/listen_event/ioio/src/: devices.rs  lib.rs  main.rs
src/types/: index.d.ts  index.ts
src/worker/: index.ts
src/worker/rust-backend/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
src/worker/rust-backend/src/: ioio.rs  lib.rs  main.rs
src/worker/rust-backend/src/ioio/: devices.rs
test/: index.test.js  index.test.ts
